@@ -5,6 +5,8 @@ VEGAN STABLE VERSIONS
 
 Version 1.15-2 (opened January 14, 2009)
 
+	* merge r790 to 1.15 branch: handle missing values in betadisper.
+
 	* merged r781 and r786  from trunk to 1.15 branch: betadisper 
 	bug fix and upgrade to work more nicely with Euclidean 'd'.
 
